ops/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lcit-sign
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
